--- a/index.html
+++ b/index.html
@@ -19,8 +19,11 @@
         <!-- jQuery -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
+        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
         <!-- Local scripting -->
         <script src="./assets/javascript/logic.js"></script>
+
+
 </head>
 
 <body>
