--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div id="option-cards">    
             <div class="row">
                 <div class="col-xs-1"></div>
-                <div class="col-12 col-sm-2">
+                <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
                         <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200X320" class="img-responsive"></a>
                         <div class="optionButtons">
@@ -99,7 +99,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-2">
+                <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
                         <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive"></a>
                         <div class="optionButtons">
@@ -108,7 +108,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-2">
+                <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
                         <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive"></a>
                         <div class="optionButtons">
@@ -117,7 +117,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-2">
+                <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
                         <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive"></a>
                         <div class="optionButtons">
@@ -126,7 +126,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-2">
+                <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
                         <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive"></a>
                         <div class="optionButtons">
