--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
                 <div class="col-xs-1"></div>
                 <div class="col-12 col-sm-2">
                     <div class="option">
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200X320" class="img-responsive"></a>
+                        <h3>Restaurant</h3>
+                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200X300" class="img-responsive"></a>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
@@ -101,7 +102,8 @@
                 </div>
                 <div class="col-12 col-sm-2">
                     <div class="option">
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive"></a>
+                        <h3>Restaurant</h3>
+                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive"></a>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
@@ -110,7 +112,8 @@
                 </div>
                 <div class="col-12 col-sm-2">
                     <div class="option">
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive"></a>
+                        <h3>Restaurant</h3>
+                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive"></a>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
@@ -119,7 +122,8 @@
                 </div>
                 <div class="col-12 col-sm-2">
                     <div class="option">
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive"></a>
+                        <h3>Restaurant</h3>
+                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive"></a>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
@@ -128,7 +132,8 @@
                 </div>
                 <div class="col-12 col-sm-2">
                     <div class="option">
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive"></a>
+                        <h3>Restaurant</h3>
+                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive"></a>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
