change to five images

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
             <div class="col-xs-10">
                 <div class="header">
                     <h1>Yahptions</h1>
-                    <p>Instructions go here. Instructions go here. Instructions go here. Instructions go here. Instructions go here. Instructions go here. Instructions go here. Instructions go here.</p>
+                    <p>Choose each of the restaurants from the options displayed below that you would like to consider eating at by clicking on them. When they light up green, you have selected that restuarant. 
+                        If you would like more options, click the re-roll button at the bottom of the page. If 
+                    </p>
                 </div>
             </div>
             <div class="col-xs-2">
@@ -92,21 +94,9 @@
                 <div class="col-xs-1"></div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
-                        <img id="placeholder" src="http://via.placeholder.com/200X320" class="img-responsive">
-                        <h3>Restaurant</h3>
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200X300" class="img-responsive"></a>
-                        <div class="optionButtons">
-                            <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
-                    <div class="option">
 
-                        <img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive">
                         <h3>Restaurant</h3>
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive"></a>
+                            <img id="placeholder" src="http://via.placeholder.com/200X300" class="img-responsive">
 
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
@@ -117,10 +107,8 @@
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
 
-                        <img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive">
-
                         <h3>Restaurant</h3>
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive"></a>
+                            <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
 
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
@@ -131,10 +119,8 @@
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
 
-                        <img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive">
-
                         <h3>Restaurant</h3>
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive"></a>
+                            <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
 
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
@@ -145,10 +131,20 @@
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
 
-                        <img id="placeholder" src="http://via.placeholder.com/200x320" class="img-responsive">
+                        <h3>Restaurant</h3>
+                            <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
+
+                        <div class="optionButtons">
+                            <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
+                    <div class="option">
 
                         <h3>Restaurant</h3>
-                        <a href="https://placeholder.com"><img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive"></a>
+                            <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
 
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
@@ -157,6 +153,11 @@
                     </div>
                 </div>
                 <div class="col-xs-1"></div>
+            </div>
+            <div class="row">
+                <div class="col-xs-12">
+                    <button type="button" id="reroll" class="btn btn-default">re-roll</button>
+                </div>
             </div>
         </div>
     </div>
