--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <div class="modal-header">
                     <h4 class="modal-title" id="modalTitle">Your Yahptions</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">×</span>
+                        <span aria-hidden="true" class="closeUserSelection">×</span>
                     </button>
                 </div>
 
@@ -167,7 +167,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default closeUserSelection" data-dismiss="modal">Close</button>
                     <!-- Use the heart icon here -->
                     <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
