styling changes main page

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <!-- Local styling -->
         <link rel="stylesheet" type="text/css" href="./assets/css/main.css" />
         <link rel="stylesheet" type="text/css" href="./assets/css/animate.css" />
+
+        <!--Google Font-->
+        <link href="https://fonts.googleapis.com/css?family=Lato:900" rel="stylesheet">
 </head>
 
 <body>
@@ -77,7 +80,8 @@
                 <div class="header">
                     <h1>Yahptions</h1>
                     <p>Choose each of the restaurants from the options displayed below that you would like to consider eating at by clicking on them. When they light up green, you have selected that restuarant. 
-                        If you would like more options, click the re-roll button at the bottom of the page. If 
+                        If you would like more options, click the re-roll button at the bottom of the page. Once you have chosen five restaurants that you want to consider, click again on the first restaurant that you 
+                        want to eliminate from consideration. Once a restaurant is eliminated, it will light up red. When you are down to only one option, your option and its information will be displayed.
                     </p>
                 </div>
             </div>
