--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </div>
             <div class="col-xs-2">
                 <div class="headeroptions">
-                    <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                    <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                     <button type="button" class="btn btn-default" id="showModal" aria-label="Left Align"><span class="glyphicon glyphicon-option-horizontal" aria-hidden="true"></span></button>
                 </div>
             </div>
@@ -95,60 +95,60 @@
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
 
-                        <h3>Restaurant</h3>
+                        <h3 class="restaurantName">Restaurant1</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200X300" class="img-responsive">
 
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
 
-                        <h3>Restaurant</h3>
+                        <h3 class="restaurantName">Restaurant2</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
 
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
 
-                        <h3>Restaurant</h3>
+                        <h3 class="restaurantName">Restaurant3</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
 
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
 
-                        <h3>Restaurant</h3>
+                        <h3 class="restaurantName">Restaurant4</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
 
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                     </div>
                 </div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
                     <div class="option">
 
-                        <h3>Restaurant</h3>
+                        <h3 class="restaurantName">Restaurant5</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
 
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                     </div>
                 </div>
@@ -158,6 +158,9 @@
                 <div class="col-xs-12">
                     <button type="button" id="reroll" class="btn btn-default">re-roll</button>
                 </div>
+            </div>
+            <div class="row" id="favorites">
+                Favorites
             </div>
         </div>
     </div>
