--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="row">
                 <div class="col-xs-1"></div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
-                    <div class="option">
+                    <div class="option-0" search-result="">
 
                         <h3>Restaurant</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200X300" class="img-responsive">
@@ -105,7 +105,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
-                    <div class="option">
+                    <div class="option-1" search-result="">
 
                         <h3>Restaurant</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
-                    <div class="option">
+                    <div class="option-2" search-result="">
 
                         <h3>Restaurant</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
@@ -129,7 +129,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
-                    <div class="option">
+                    <div class="option-3" search-result="">
 
                         <h3>Restaurant</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
@@ -141,7 +141,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-2 cardclass" data-state="chooseRestaurant">
-                    <div class="option">
+                    <div class="option-4" search-result="">
 
                         <h3>Restaurant</h3>
                             <img id="placeholder" src="http://via.placeholder.com/200x300" class="img-responsive">
