--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <div class="container">
         <!-- .modal -->
         <div class="modal show" id="searchModal" role="dialog">
-            <div class="modal-dialog">
+            <!-- div class="modal-dialog"-->
             <!-- .modal-content-->
             <div class="modal-content">
-                <div class="modal-header">
+                <div class="modal-header modal-header-danger">
                     <!-- 'x' in right corner -->
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                     <h4 class="modal-title">Find Yahptions</h4>
@@ -84,35 +84,39 @@
     <!-- open modal on click of pic -->
     <a href="#" data-toggle="modal" data-target="#userSelection"></a>
     <!-- Final UserSelection Modal-->
-    <div class="modal fade" id="userSelection" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+    <div class="modal fade" id="userSelection" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true"> -->
         <div class="modal-dialog">
             <div class="modal-content">
 
-            <div class="modal-header">
-                <h4 class="modal-title" id="modalTitle">Your Yahptions</h4>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">×</span>
-                </button>
-            </div>
+                <div class="modal-header modal-header-danger">
+                    <h4 class="modal-title" id="modalTitle">Your Yahptions</h4>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">×</span>
+                        </button>
+                </div>
 
-            <div class="modal-body">
-                <h3>Photo</h3>
-                <h3>Restaurant Name</h3>
-                <h3>Rating:</h3>
-                <h3>Cuisine:</h3>
-                <h3>Address</h3>
-                <h3>Phone #:</h3>
-                <h3>Web link</h3>
-            </div>
+                <div class="modal-body">
+                    <h3>Restaurant Name</h3>
+                    <img src="https://res.cloudinary.com/sdawson/image/upload/v1525052025/food_placeholder_mbzmzn.png"
+                        class="img-responsive" alt="placeholder" id="restPlaceholder">
+                    <h3>Rating:</h3>
+                    <h3>Cuisine:</h3>
+                    <h3>Address</h3>
+                    <h3>Phone#</h3>
+                    <h3>Web link</h3>
+                </div>
 
-            <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                <!-- Use the heart icon here -->
-                <button type="button" class="btn btn-primary">Save changes</button>
-            </div>
+                <div class="modal-footer">
+                    <!-- Use the heart icon here -->
+                    <button type="button" class="btn btn-danger">
+                        <span class="glyphicon glyphicon-heart" aria-hidden="true"></span>
+                    </button>
+                    <!-- Close button -->
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
             </div>
         </div>
-        </div>
+    </div>
 
 
 </body>
