--- a/index.html
+++ b/index.html
@@ -43,16 +43,16 @@
                         </div>
                         <div class="form-group">   <!-- Zip Code Button -->
                             <div class="radio">
-                                <label for="zipCodeBtn"><input type="radio" name="radioBtn" id="zipCodeBtn" value="Zip Code">Zip Code<input type="text" name="mail" size="6" placeholder="" id="zipCodeText"></label>
+                                <label for="zipCodeBtn"><input type="radio" name="radioBtn" id="zipCodeBtn" value="Zip Code">Zip Code <input type="text" name="mail" size="6" placeholder="" id="zipCodeText"></label>
                             </div>
                         </div>
                         <div class="form-group">   <!-- Radius w/ required coding -->
                             <label for="radiusBtn">Radius
                                 <select id="radiusBtn" class="custom-select" id="inputOptions" required>
                                 <option selected>Choose...</option>
-                                <option value="1">1 mile</option>
-                                <option value="5">5 miles</option>
-                                <option value="10">10 miles</option>
+                                <option value="1">1 Miles</option>
+                                <option value="5">5 Miles</option>
+                                <option value="10">10 Miles</option>
                                 </select>
                             </label>
                         </div>
