--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         <div class="form-group">   <!-- Radius w/ required coding -->
                             <label for="radiusBtn">Radius
                                 <select id="radiusBtn" class="custom-select" id="inputOptions" required>
-                                <option selected>Choose...</option>
+                                <option selected disabled>Choose...</option>
                                 <option value="1">1 Miles</option>
                                 <option value="5">5 Miles</option>
                                 <option value="10">10 Miles</option>
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="col-xs-10">
                     <div class="header">
-                        <h1><span><img class="dice" src="./assets/blackoutlinedice.png"></span>Yahptions</h1>
+                        <h1><span><img class="dice" src="./assets/images/blackoutlinedice.jpg"></span>Yahptions</h1>
                         <p class="rules">Choose each of the restaurants from the options displayed below that you would like to consider eating at by clicking on them. When they light up green, you have selected that restuarant. 
                             If you would like more options, click the re-roll button at the bottom of the page. Once you have chosen five restaurants that you want to consider, click again on the first restaurant that you 
                             want to eliminate from consideration. Once a restaurant is eliminated, it will light up red. When you are down to only one option, your option and its information will be displayed.
