Added message for where to start if modal is exited and no search ran

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                     <div class="headeroptions">
                         <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         <button type="button" class="btn btn-default" id="showModal" aria-label="Left Align"><span class="glyphicon glyphicon-option-horizontal" aria-hidden="true"></span></button>
+                        <div class="float-bubble">
+                            <div class="arrowimage" style="transform: scaleY(-1)"> </div>
+                            <div class="text-center form-group start">Start!</div>
+                        </div>
                     </div>
                 </div>
             </div>
