--- a/index.html
+++ b/index.html
@@ -70,15 +70,12 @@
                 <div class="col-xs-10">
                     <div class="header">
                         <h1><span><img class="dice" src="./assets/images/blackoutlinedice.jpg"></span>Yahptions</h1>
-                        <p class="rules">Choose each of the restaurants from the options displayed below that you would like to consider eating at by clicking on them. When they light up green, you have selected that restuarant. 
-                            If you would like more options, click the re-roll button at the bottom of the page. Once you have chosen five restaurants that you want to consider, click again on the first restaurant that you 
-                            want to eliminate from consideration. Once a restaurant is eliminated, it will light up red. When you are down to only one option, your option and its information will be displayed.
-                        </p>
+                        <p class="rules"></p>
                     </div>
                 </div>
                 <div class="col-xs-2">
                     <div class="headeroptions">
-                        <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                        <button type="button" class="btn btn-default heart" id="favModalOpen" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         <button type="button" class="btn btn-default" id="showModal" aria-label="Left Align"><span class="glyphicon glyphicon-option-horizontal" aria-hidden="true"></span></button>
                         <div class="float-bubble">
                             <div class="arrowimage" style="transform: scaleY(-1)"> </div>
@@ -97,7 +94,7 @@
                         </div>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heartBtn-0 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                         <h4 id="cuisines"></h4>
                         <h4 id="rating">Rating: </h4>
@@ -109,7 +106,7 @@
                         </div>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heartBtn-1 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                         <h4 id="cuisines"></h4>
                         <h4 id="rating">Rating: </h4>
@@ -121,7 +118,7 @@
                         </div>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heartBtn-2 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                         <h4 id="cuisines"></h4>
                         <h4 id="rating">Rating: </h4>
@@ -133,7 +130,7 @@
                         </div>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heartBtn-3 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                         <h4 id="cuisines"></h4>
                         <h4 id="rating">Rating: </h4>
@@ -145,7 +142,7 @@
                         </div>
                         <div class="optionButtons">
                             <button type="button" class="btn btn-default" aria-label="Left Align"><span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span></button>
-                            <button type="button" class="btn btn-default heart" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
+                            <button type="button" class="btn btn-default heartBtn-4 favoriteThis" aria-label="Left Align"><span class="glyphicon glyphicon-heart" aria-hidden="true"></span></button>
                         </div>
                         <h4 id="cuisines"></h4>
                         <h4 id="rating">Rating: </h4>
@@ -156,9 +153,6 @@
                         <button type="button" id="reroll" class="btn btn-danger">re-roll</button>
                         <h5 id="reroll-message"></h5>
                     </div>
-                </div>
-                <div class="row" id="favorites">
-                    Favorites
                 </div>
             </div>
         </div>
@@ -205,25 +199,28 @@
             <!-- open modal on click of heart icon -->
             <a href="#" data-toggle="modal" data-target="#fav"></a>
             <!--  favorites modal -->
-            <div class="modal fade" id="fav" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
+            <div class="modal fade" id="favModal" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
                 <div class="modal-dialog modal-sm">
                     <div class="modal-content">
                         <div class="modal-header bg-danger">
                             <h4 class="modal-title" id="modalTitle">Favorites</h4>
-                            <button type="button" class="close" data-dismiss="modal" id="hideModal" aria-label="Close">
+                            <button type="button" class="close hideFavModal" data-dismiss="modal" id="hideModal" aria-label="Close">
                                 <span aria-hidden="true">×</span>
                             </button>
                         </div>
                         <div class="modal-body text-center">
+                            <div id="favorites">
+                                Favorites
+                            </div>
                         </div>
                         <div class="modal-footer">
                             <!-- Close button -->
-                            <button type="button" class="btn btn-danger" data-dismiss="modal" id="hideModal">Close</button>
+                            <button type="button" class="btn btn-danger hideFavModal" data-dismiss="modal" id="hideModal">Close</button>
                         </div>
                     </div>
                 </div>
             </div>
-        <!-- End favorites modal -->
+            <!-- End favorites modal -->
         <!-- Begin info modal -->
         <!-- info modal -->
         <div class="modal fade" id="info" tabindex="-1" role="dialog" aria-labelledby="modal" aria-hidden="true">
