Added button icons to favorites and history modals, added more content to More Info modal

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             <span aria-hidden="true">×</span>
                         </button>
                     </div>
-                    <div class="modal-body text-center">
+                    <div class="modal-body text-left">
                         <div id="favorites">
                             Favorites
                         </div>
@@ -206,7 +206,7 @@
                             <span aria-hidden="true">×</span>
                         </button>
                     </div>
-                    <div class="modal-body text-center">
+                    <div class="modal-body text-left">
                         <div id="history">
                         </div>
                     </div>
@@ -231,11 +231,12 @@
                         </button>
                     </div>
                     <div class="modal-body text-center">
-                        <h4 id="infoName">Name: </h4>
+                        <h3 id="infoName">Name: </h3>
                         <p><img id="infoImg" class="img-responsive"></p>
                         <h4 id="infoRating">Rating:</h4>
                         <h4 id="infoCuisines">Type:</h4>
                         <h4 id="infoAddress">Address:</h4>
+                        <h4 id="infoAverageCost">Average Cost:</h4>
                         <h4 id="infoURL">URL:</h4>
                     </div>
                     <div class="modal-footer">
@@ -257,11 +258,12 @@
                             </button>
                         </div>
                         <div class="modal-body text-center">
-                            <h4 id="infoName">Name: </h4>
+                            <h3 id="infoName">Name: </h3>
                             <p><img id="infoImg" class="img-responsive"></p>
                             <h4 id="infoRating">Rating:</h4>
                             <h4 id="infoCuisines">Type:</h4>
                             <h4 id="infoAddress">Address:</h4>
+                            <h4 id="infoAverageCost">Average Cost:</h4>
                             <h4 id="infoURL">URL:</h4>
                         </div>
                         <div class="modal-footer">
@@ -283,11 +285,12 @@
                             </button>
                         </div>
                         <div class="modal-body text-center">
-                            <h4 id="infoName">Name: </h4>
+                            <h3 id="infoName">Name: </h3>
                             <p><img id="infoImg" class="img-responsive"></p>
                             <h4 id="infoRating">Rating:</h4>
                             <h4 id="infoCuisines">Type:</h4>
                             <h4 id="infoAddress">Address:</h4>
+                            <h4 id="infoAverageCost">Average Cost:</h4>
                             <h4 id="infoURL">URL:</h4>
                         </div>
                         <div class="modal-footer">
@@ -309,11 +312,12 @@
                             </button>
                         </div>
                         <div class="modal-body text-center">
-                            <h4 id="infoName">Name: </h4>
+                            <h3 id="infoName">Name: </h3>
                             <p><img id="infoImg" class="img-responsive"></p>
                             <h4 id="infoRating">Rating:</h4>
                             <h4 id="infoCuisines">Type:</h4>
                             <h4 id="infoAddress">Address:</h4>
+                            <h4 id="infoAverageCost">Average Cost:</h4>
                             <h4 id="infoURL">URL:</h4>
                         </div>
                         <div class="modal-footer">
@@ -335,11 +339,12 @@
                             </button>
                         </div>
                         <div class="modal-body text-center">
-                            <h4 id="infoName">Name: </h4>
+                            <h3 id="infoName">Name: </h3>
                             <p><img id="infoImg" class="img-responsive"></p>
                             <h4 id="infoRating">Rating:</h4>
                             <h4 id="infoCuisines">Type:</h4>
                             <h4 id="infoAddress">Address:</h4>
+                            <h4 id="infoAverageCost">Average Cost:</h4>
                             <h4 id="infoURL">URL:</h4>
                         </div>
                         <div class="modal-footer">
