--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
                     <div class="modal-body">
                         <div class="form-group">   <!-- Near me Button -->
                             <div class="radio">
-                                <label><input type="radio" name="radioBtn" id="nearMeBtn" value="Near Me">Near Me<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></label>
+                                <label><input type="radio" name="radioBtn" class="enter" id="nearMeBtn" value="Near Me">Near Me<span class="glyphicon glyphicon-map-marker" aria-hidden="true"></span></label>
                             </div>
                         </div>
                         <div class="form-group">   <!-- Zip Code Button -->
                             <div class="radio">
-                                <label for="zipCodeBtn"><input type="radio" name="radioBtn" id="zipCodeBtn" value="Zip Code">Zip Code <input type="text" name="mail" size="6" placeholder="" id="zipCodeText"></label>
+                                <label for="zipCodeBtn"><input type="radio" name="radioBtn" class="enter" id="zipCodeBtn" value="Zip Code">Zip Code <input type="text" name="mail" class="enter" size="6" placeholder="" id="zipCodeText"></label>
                             </div>
                         </div>
                         <div class="form-group">   <!-- Radius w/ required coding -->
